--- a/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
@@ -58,49 +58,51 @@
                             <td class="timestamp" rowspan="2">@offset.ToString("HH:mm")</td>
                             foreach (Room r in Model.Rooms)
                             {
-                                <td class="row" style="position:relative;z-index:2;">
-                                    @foreach (BasicEvent e in Model.Events)
-                                    {
-                                        if (e.Rooms.Contains(r))
+                                <td class="row">
+                                    <div style="position:relative">
+                                        @foreach (BasicEvent e in Model.Events)
                                         {
-                                            @* Calculate painting start and height *@
-                                            int start = 0;
-                                            if(e.Start > offset)
+                                            if (e.Rooms.Contains(r))
                                             {
-                                                TimeSpan s = e.Start - offset;
-                                                start = (s.Hours * 60 + s.Minutes) / 2;
-                                            }
-                                            int height = 720 - start;
-                                            if(e.End < offset.AddDays(1))
-                                            {
-                                                if(start == 0)
+                                                @* Calculate painting start and height *@
+                                                int start = 0;
+                                                if(e.Start > offset)
                                                 {
-                                                    TimeSpan s = e.End - offset;
-                                                    height = (s.Hours * 60 + s.Minutes) / 2;
+                                                    TimeSpan s = e.Start - offset;
+                                                    start = (s.Hours * 60 + s.Minutes) / 2;
                                                 }
-                                                else
+                                                int height = 720 - start;
+                                                if(e.End < offset.AddDays(1))
                                                 {
-                                                    TimeSpan s = e.End - e.Start;
-                                                    height = (s.Hours * 60 + s.Minutes) / 2;
+                                                    if(start == 0)
+                                                    {
+                                                        TimeSpan s = e.End - offset;
+                                                        height = (s.Hours * 60 + s.Minutes) / 2;
+                                                    }
+                                                    else
+                                                    {
+                                                        TimeSpan s = e.End - e.Start;
+                                                        height = (s.Hours * 60 + s.Minutes) / 2;
+                                                    }
                                                 }
-                                            }
                                             
-                                            <div class="day-event"
-                                                style="position:absolute;z-index:1;top:@(start)px;left:4px;width:92px;height:@(height)px;
-                                                       background-color:@(e.getColor());@(e.ViewVisible?"cursor:pointer":"")"
-                                                @(e.ViewVisible?"onclick=window.location='" + Url.Action("Index","Event", new { eventId = e.ID }) + "'":"")>
-                                                @if(e.ViewVisible)
-                                                {
-                                                    @e.Name <br />
-                                                    @* Creator: e.Creator and more fields *@
-                                                }
-                                                else
-                                                {
-                                                    @:Room occupied!
-                                                }
-                                            </div>
-                                        }
-                                    }
+                                                <div class="day-event"
+                                                    style="position:absolute;z-index:1;top:@(start)px;left:4px;width:92px;height:@(height)px;
+                                                            background-color:@(e.getColor());@(e.ViewVisible?"cursor:pointer":"")"
+                                                    @(e.ViewVisible?"onclick=window.location='" + Url.Action("Index","Event", new { eventId = e.ID }) + "'":"")>
+                                                    @if(e.ViewVisible)
+                                                    {
+                                                        @e.Name <br />
+                                                        @* Creator: e.Creator and more fields *@
+                                                    }
+                                                    else
+                                                    {
+                                                        @:Room occupied!
+                                                    }
+                                                </div>
+                                            }
+                                        }  
+                                    </div>
                                 </td>
                             }
                         }
@@ -113,7 +115,8 @@
                                 offset = offset.AddHours(1);
                                 <td class="timestamp" rowspan="2">@offset.ToString("HH:mm")</td>
                             }
-                            @for (int i = 0; i < Model.Rooms.Count; i++) { <td class="row"></td> }
+                            @for (int i = 0; i < Model.Rooms.Count; i++)
+                            { <td class="row"></td> }
                         </tr>
                     }
                 </table>
@@ -124,9 +127,14 @@
                 @if (UserModel.GetCurrentUserID() != -1)
                 {
                     @* A user is signed in... *@
-                    <input type="button" value="New event!" onclick="window.location='@Url.Action("EditEvent","Event",
-                                                                    new { eventId = -1, year = Model.Date.Year,
-                                                                          month = Model.Date.Month, day = Model.Date.Day })'"/>
+                    <input type="button" value="New event!" onclick="window.location='@Url.Action("EditEvent", "Event",
+                                                                    new
+                                                                    {
+                                                                        eventId = -1,
+                                                                        year = Model.Date.Year,
+                                                                        month = Model.Date.Month,
+                                                                        day = Model.Date.Day
+                                                                    })'"/>
                 }
             </td>
         </tr>
