--- a/CalendarApplication/CalendarApplication/Content/Site.css
+++ b/CalendarApplication/CalendarApplication/Content/Site.css
@@ -97,6 +97,7 @@ table.nav-bar div.drop {
     z-index:2;
     width:78px;
     left:-3px;
+    display:none;
 }
 table.nav-bar-drop {
     border-collapse:collapse;
