--- a/CalendarApplication/CalendarApplication/Views/Calendar/Month.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Month.cshtml
@@ -109,12 +109,12 @@
                                                         onmouseover="showPopup('@divId')"
                                                         onmouseout="hidePopup('@divId')"
                                                         onclick="window.location='@Url.Action("Index","Event",new {eventId=e.ID})'">
-                                                        <div id="@(divId)_small" hidden="hidden" style="position:absolute;z-index:2;
+                                                        <div id="@(divId)_small" style="display:none;position:absolute;z-index:2;
                                                                     background-color:@(e.getColor());white-space:nowrap;cursor:pointer"
                                                             onclick="window.location='@Url.Action("Index","Event",new {eventId=e.ID})'">
                                                             @e.Name
                                                         </div>
-                                                        <div id="@(divId)_big" hidden="hidden" style="position:absolute;z-index:2;cursor:pointer" onmouseout="hidePopupBig('@divId')">
+                                                        <div id="@(divId)_big" style="display:none;position:absolute;z-index:2;cursor:pointer" onmouseout="hidePopupBig('@divId')">
                                                             <table class="event-popup">
                                                                 <tr><td colspan="2" style="background-color:@(e.getColor());white-space:nowrap"
                                                                     onclick="window.location='@Url.Action("Index","Event",new {eventId=e.ID})'">@e.Name</td></tr>
