--- a/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
@@ -12,25 +12,13 @@
 
 @using (Html.BeginForm())
 {
+    <!-- Print message if any (fx if unsuccessful login) -->
+    <p style="color:red">
+        @TempData["message"]
+    </p>
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>Create new account</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.RealName)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.RealName)
-            @Html.ValidationMessageFor(model => model.RealName)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.UserName)
@@ -56,11 +44,25 @@
             @Html.ValidationMessageFor(model => model.PasswordConfirm)
         </div>
 
+                <div class="editor-label">
+            @Html.LabelFor(model => model.RealName)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.RealName)
+            @Html.ValidationMessageFor(model => model.RealName)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Email)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Email)
+            @Html.ValidationMessageFor(model => model.Email)
+        </div>
+
+
+        @Html.Raw(Html.GenerateCaptcha())
+        @Html.ValidationMessage("recaptcha")
         <input type="submit" value="Register" />
     </fieldset>
-    
-    <!-- Print message if any (fx if unsuccessful login) -->
-    <p style="color:red">
-        @TempData["message"]
-    </p>
 }
