Added a lot of testing of MySqlConnect and subclasses in DatabaseTest.cs (+700 lines) Corrected two bugs:   - A bug in CreateGroup, that made it impossible to create a new group.   - A visual bug in IE.

--- a/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     </noscript>
     <table class="layout-style-basic">
         <tr class="account-header">
-            <th>
+            <th style="text-align:right">
                 @Html.Partial("_LoginPartial")
             </th>
         </tr>
