added most of the group functionality just needs a page to set privileges for groups doesn't look too pretty though
also made a few small changes elsewhere:
- added mailto links for email in user/index
- set editgroup to return to maintenance when creating
- expanded noscript message for about page in the mailto link

--- a/CalendarApplication/CalendarApplication/Views/Home/About.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/About.cshtml
@@ -41,5 +41,5 @@
             document.write("<a href='mailto:"+link+"'>Email us.</a>")
             }
             //-->
-            </script><noscript>Sorry, you need Javascript on to email us.</noscript>
+            </script><noscript>Sorry, you need Javascript enabled to see the email, so we don't get spammed by bots.</noscript>
 }
