--- a/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
@@ -35,7 +35,7 @@ else {
                     </tr>
                     <tr>
                         <td>Email</td>
-                        <td>@Model.Email</td>
+                        <td><a href='@("mailto:"+Model.Email)'>@Model.Email</a></td>
                     </tr>
                 </table>
             </td>
