--- a/CalendarApplication/CalendarApplication/Views/GroupView/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/GroupView/Index.cshtml
@@ -1,11 +1,20 @@
-﻿@{
+﻿@model CalendarApplication.Models.Group.GroupListModel
+
+@{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Groups</h2>
 
 
 @using (Html.BeginForm())
 {
-    <text>herpderp</text>
+    <table class="gridtable">
+        @for (int i = 0; i < Model.GroupList.Count; i++)
+        {
+            <tr>
+                <td>@Html.ActionLink(Model.GroupList[i].Name, "ViewGroup", new {groupId = Model.GroupList[i].ID})</td>
+            </tr>
+        }
+    </table>
 }
