--- a/CalendarApplication/CalendarApplication/Views/Event/EventSpecificList.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EventSpecificList.cshtml
@@ -7,7 +7,7 @@
         @for (int i = 0; i < Model.TypeSpecifics.Count; i++)
         {
             <tr style="padding:0">
-                <td style="padding:2px">
+                <td style="padding:2px;padding-bottom:10px">
                     @Html.FieldEditorFor(m => m.TypeSpecifics[i])
                 </td>
             </tr>
