--- a/CalendarApplication/CalendarApplication/Views/GroupView/ViewGroup.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/GroupView/ViewGroup.cshtml
@@ -7,6 +7,7 @@
 
 <h2>  @(string.IsNullOrEmpty(Model.Name) ? "Group" : Model.Name) </h2>
 @using (Html.BeginForm()) {
+    UserModel user = UserModel.GetCurrent();
     <table>
         <tr>
             <td>
@@ -48,20 +49,36 @@
                     }
                 </table>
             </td>
+           <!-- Perhaps not show this to everyone? e.g.: if (user.Admin || Model.IsMember(user.ID)){ -->
+            <td>
+                <table class="gridtable">
+                    <tr>
+                        <td>Event type privileges</td>
+                    </tr>
+                    @for (int i = 0; i < Model.EventTypes.Count; i++)
+                    {
+                        <tr>
+                            <td>@Model.EventTypes[i].Name</td>
+                        </tr>
+                    }
+                </table>
+            </td>
+            <!--}-->
         </tr>
     </table>
     <br />
-    UserModel user = UserModel.GetCurrent();
     if(user.Admin)
                 {
-                    <!-- Admins may edit the group and set privileges (PUT LINK TO PRIVILEGES HERE WHEN IT'S DONE) -->
-                    @Html.ActionLink("Edit group", "EditGroup", "Maintenance", new { groupId = Model.ID }, null)
+                    <!-- Admins may edit the group members and set privileges -->
+                    @Html.ActionLink("Edit group members", "EditGroup", "Maintenance", new { groupId = Model.ID }, null) 
+                    <br />
+                    @Html.ActionLink("Set group privileges", "SetPrivileges", "GroupView", new { groupId = Model.ID }, null)
                     <br />
                 }
-    if(Model.IsLeader(user.ID))
+    else if(Model.IsLeader(user.ID))
                 {
-                    <!-- Leaders may edit the group -->
-                    @Html.ActionLink("Edit group", "EditGroup", "Maintenance", new { groupId = Model.ID }, null)
+                    <!-- Leaders may edit the group members -->
+                    @Html.ActionLink("Edit group members", "EditGroup", "Maintenance", new { groupId = Model.ID }, null)
                     <br />
                 }
 }
