--- a/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
@@ -76,15 +76,20 @@ else {
     {
         if(Model.Active) {
             if(Model.Admin) {
-                @:<input type="button" value="Remove admin rights" onclick="updateUser('admin',@(Model.ID),false)"/>
+                <input type="button" value="Remove admin rights" onclick="updateUser('admin',@(Model.ID),false)"/>
             }
             else {
-                @:<input type="button" value="Make admin" onclick="updateUser('admin',@(Model.ID),true)"/>
+                <input type="button" value="Make admin" onclick="updateUser('admin',@(Model.ID),true)"/>
             }
-            @:<input type="button" value="Deactivate user" onclick="updateUser('active',@(Model.ID),false)"/>
+            <input type="button" value="Reset password" onclick="resetPassword(@(Model.ID))">
+            <input type="button" value="Deactivate user" onclick="updateUser('active',@(Model.ID),false)"/>
+            <br />
+            <div id="new_pass" style="background-color:blue;color:white;width:300px;
+                  height:50px;text-align:center;display:none"></div>
         }
-        else {
-            @:<input type="button" value="Activate user" onclick="updateUser('active',@(Model.ID),true)"/>
+        else
+        {
+            <input type="button" value="Activate user" onclick="updateUser('active',@(Model.ID),true)"/>
         }
     }
 }
