--- a/CalendarApplication/CalendarApplication/Views/GroupView/ViewGroup.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/GroupView/ViewGroup.cshtml
@@ -53,7 +53,7 @@
             <td>
                 <table class="gridtable">
                     <tr>
-                        <td>Event type privileges</td>
+                        <td>Event type creation privileges</td>
                     </tr>
                     @for (int i = 0; i < Model.EventTypes.Count; i++)
                     {
