--- a/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
@@ -24,6 +24,17 @@
 
     }
 
+    function deleteGroup() {
+        var c = confirm("Are you sure you want to delete this group? \nThis is permanent and cannot be undone!");
+        if (c == true) {
+            setSubmitValue(8)
+        }
+        else {
+            setSubmitValue(9)
+        }
+
+    }
+
 </script>
 
 @using (Html.BeginForm()) {
@@ -54,6 +65,12 @@
             </td>
             <td>
                 <input type="submit" value="Edit" onclick="setSubmitValue(2)" />
+            </td>
+            <td>
+                <input type="submit" value="Set privileges" onclick="setSubmitValue(10)" />
+            </td>
+            <td>
+                <input type="submit" value="Delete" onclick="deleteGroup()" />
             </td>
             <td>
                 <input type="submit" value="Create new" onclick="setSubmitValue(3)" />
