--- a/CalendarApplication/CalendarApplication/Views/Calendar/_FilterPartial.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/_FilterPartial.cshtml
@@ -2,6 +2,7 @@
 
 @using CalendarApplication.Models.Event;
 
+<body onload="checkBoxes()">
 <fieldset>
     <legend>Filter</legend>
         <b>Event States:</b><br />
@@ -12,7 +13,7 @@
         @Html.CheckBoxFor(model => Model.Filter.ViewState2)
         <span style="color:@BasicEvent.getColor(2)">@BasicEvent.getStateText(2)</span><br />
 
-        <b>Event Types:</b><br />
+        <b>Event Types:</b><input type="checkbox" id="checkAll" checked="checked" onchange="changeCheckboxes(this)" /><br />
         @for (int i = 0; i < Model.Filter.Eventtypes.Count; i++)
         {
             <div>
@@ -24,3 +25,4 @@
         }
 <input type="submit" value="Go"/>
 </fieldset>
+</body>
